spacing and pointer fixes

--- a/Snippets/Simplified Panel Area/SimplifiedPanelArea.css
+++ b/Snippets/Simplified Panel Area/SimplifiedPanelArea.css
@@ -6,22 +6,6 @@
     pointer-events: all;
   }
 }
-:root {
-  --panel-spotify-marginLeft: 0;
-  --panel-spotify-marginRight: 8px;
-  --panel-activityIcon-marginLeft: 0;
-  --panel-activityIcon-marginRight: 4px;
-}
-:root.refresh-fast-follow-avatars {
-  --panel-spotify-marginLeft: 2px;
-  --panel-spotify-marginRight: 10px;
-  --panel-activityIcon-marginLeft: 2px;
-  --panel-activityIcon-marginRight: 6px;
-}
-:root.align-chat-input {
-  --panel-activityIcon-marginRight: 0;
-  --panel-spotify-marginRight: 0;
-}
 .panels_c48ade > div {
   z-index: 0;
 }
@@ -120,8 +104,6 @@
   &:before {
     content: "";
     height: 32px;
-    margin-left: var(--panel-spotify-marginLeft);
-    margin-right: var(--panel-spotify-marginRight);
     background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' height='24' viewBox='0 0 24 24' width='24'%3E%3Cpath d='m12 0c-6.6275 0-12 5.3725-12 12 0 6.6274 5.3725 12 12 12 6.6274 0 12-5.3726 12-12 0-3.1826-1.2643-6.2348-3.5147-8.4853-2.2505-2.2505-5.3027-3.5147-8.4853-3.5147zm5.475 17.325c-.2201.3343-.6576.4478-1.0124.2624-2.8126-1.7249-6.3751-2.1-10.5376-1.1624-.2612.0602-.5348-.0234-.7176-.2195-.1829-.1961-.2472-.4748-.1687-.7313.0784-.2563.2876-.4514.5489-.5117 4.575-1.05 8.475-.6 11.6626 1.35.1679.1012.2869.2666.3294.458.0426.1913.0048.3917-.1044.5544zm1.5-3.3c-.1286.2096-.3356.3593-.575.4156s-.4914.0148-.7-.1156c-3.225-1.9876-8.1376-2.55-11.9626-1.3876-.3216.0938-.6686.009-.9107-.2226-.242-.2316-.3421-.5747-.2626-.9.0796-.3253.3266-.5836.6481-.6774 4.35-1.3124 9.7876-.6749 13.4626 1.6126.4211.279.5525.8375.3 1.275zm.1124-3.375c-3.8624-2.2876-10.2374-2.5126-13.95-1.3876-.5572.0889-1.094-.2486-1.2553-.7895-.1613-.5407.103-1.1172.6179-1.3481 4.2376-1.275 11.2874-1.05 15.75 1.6126.2572.151.4421.3997.5128.6894.0707.2897.021.5956-.1378.848-.3385.5036-1.0051.6662-1.5376.375z' fill='hsl(141.154 calc(var(--saturation-factor, 1)*72.897%25) 41.961%25)'/%3E%3C/svg%3E") center / 20px no-repeat, hsl(var(--spotify-hsl) / .1);
     border-radius: 8px;
     box-shadow: inset 0 0 0 1px var(--border-faint);
@@ -176,10 +158,7 @@
 }
 .gameWrapper__5dec7, .gameWrapper__8c6c2 {
   gap: var(--space-8);
-}
-.wrapper_a629d4, .gameIcon__5dec7, .gameIconWrapper__8c6c2 {
-  margin-left: var(--panel-activityIcon-marginLeft);
-  margin-right: var(--panel-activityIcon-marginRight);
+  z-index: 1;
 }
 .info__8c6c2, .info__5dec7 {
   margin-left: 0;
@@ -190,6 +169,18 @@
       position: absolute;
       inset: 0;
     }
+  }
+}
+.info__8c6c2 .clickableGameName__8c6c2 {
+  [data-text-variant] {
+    text-decoration: none;
+  }
+  &:before {
+    content: "";
+    cursor: pointer;
+    position: absolute;
+    inset: 0;
+    z-index: -1;
   }
 }
 .panelButtonContainer__4cd01 {
@@ -229,13 +220,15 @@
   flex: unset !important;
   min-width: 40px;
 }
+.ping__06d62 {
+  pointer-events: all;
+}
 .largePing__06d62 {
   margin: 0 !important;
 }
 .rtcConnectionStatus__06d62 {
   column-gap: var(--space-8);
   pointer-events: none;
-  z-index: 1;
 }
 .labelWrapper__06d62 {
   pointer-events: all;
@@ -270,6 +263,7 @@
     content: "";
     position: absolute;
     inset: 0;
+    z-index: -1;
   }
 }
 .voiceUsers_e131a9 {
